--- a/hw/gpio/Makefile.objs
+++ b/hw/gpio/Makefile.objs
@@ -9,4 +9,5 @@ common-obj-$(CONFIG_OMAP) += omap_gpio.o
 common-obj-$(CONFIG_IMX) += imx_gpio.o
 common-obj-$(CONFIG_RASPI) += bcm2835_gpio.o
 common-obj-$(CONFIG_NRF51_SOC) += nrf51_gpio.o
+common-obj-$(CONFIG_STM32F407_SOC) += stm32f40x_gpio.o
 common-obj-$(CONFIG_ASPEED_SOC) += aspeed_gpio.o
